--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
+    "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
+    "semantic-ui-react": "^2.1.5",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
