--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
