--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-share": "^5.0.3",
     "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
